fix about photos alignment and padding

--- a/style.css
+++ b/style.css
@@ -446,7 +446,6 @@ body {
   padding: 0;
   border: 0;
   margin: 0;
-  align-self: center;
 }
 
 .prev {
